<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".infos.Preferencies">

    <TextView
        android:id="@+id/txt_pref"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/txt_Preferencies"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_langue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/txt_param_langue"
        android:textAlignment="textStart"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_pref" />

    <RadioGroup
        android:id="@+id/grpRB_langue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_langue">

        <RadioButton
            android:id="@+id/rb_en"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_en" />

        <RadioButton
            android:id="@+id/rb_fr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/rb_fr" />

        <RadioButton
            android:id="@+id/rb_it"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_it" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/choice_en"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@+id/grpRB_langue"
        app:layout_constraintTop_toBottomOf="@+id/grpRB_langue">

        <RadioButton
            android:id="@+id/rb_en_US"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_en_US" />

        <RadioButton
            android:id="@+id/rb_en_GB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_en_GB" />
    </RadioGroup>

    <AutoCompleteTextView
        android:id="@+id/autoCplt_champion_param"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:hint="@string/text_select_champ"
        app:layout_constraintStart_toStartOf="@+id/txt_langue"
        app:layout_constraintTop_toBottomOf="@+id/choice_en" />

    <Button
        android:id="@+id/pref_apply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:text="@string/btn_apply"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/pref_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="15dp"
        android:text="@string/b_back"
        android:background="@drawable/btn_back_appearance"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>