<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Selection_Role">

    <Button
        android:id="@+id/b_confirm_role"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:text="@string/b_confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/i_map" />

    <ImageView
        android:id="@+id/i_map"
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_select_role"
        app:srcCompat="@drawable/ic_launcher_foreground" />

    <Button
        android:id="@+id/b_back_role"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="15dp"
        android:text="@string/b_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txt_select_role"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:textSize="24sp"
        android:typeface="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/select_role_txt" />
</androidx.constraintlayout.widget.ConstraintLayout>